Implemented new api, but need to rerun swagger-codegen
